// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic function 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"Function_IamRole_678BE84C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"Function_IamRolePolicy_E3B26607\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.Function_IamRole_678BE84C.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"Function_IamRolePolicyAttachment_CACE1358\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.Function_IamRole_678BE84C.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"Function_LambdaFunction_27600CF9\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.Function_IamRole_678BE84C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.Function_Bucket_CC3697BD.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.Function_S3Object_C62A0C2D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"Function_Bucket_CC3697BD\\": {
      }
    },
    \\"aws_s3_object\\": {
      \\"Function_S3Object_C62A0C2D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Function_Bucket_CC3697BD.bucket}\\",
        \\"key\\": \\"c83ba82ab737b318be3084bef5b7996129facf99b8.138a5b05e087726a9b80c365fc5f7894.zip\\",
        \\"source\\": \\"assets/Function_Asset_212D1EED/138A5B05E087726A9B80C365FC5F7894/archive.zip\\"
      }
    }
  }
}"
`;

exports[`basic function with environment variables 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"Function_IamRole_678BE84C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"Function_IamRolePolicy_E3B26607\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.Function_IamRole_678BE84C.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"Function_IamRolePolicyAttachment_CACE1358\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.Function_IamRole_678BE84C.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"Function_LambdaFunction_27600CF9\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BOOM\\": \\"BAM\\",
            \\"FOO\\": \\"BAR\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.Function_IamRole_678BE84C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.Function_Bucket_CC3697BD.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.Function_S3Object_C62A0C2D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"Function_Bucket_CC3697BD\\": {
      }
    },
    \\"aws_s3_object\\": {
      \\"Function_S3Object_C62A0C2D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Function_Bucket_CC3697BD.bucket}\\",
        \\"key\\": \\"c83ba82ab737b318be3084bef5b7996129facf99b8.138a5b05e087726a9b80c365fc5f7894.zip\\",
        \\"source\\": \\"assets/Function_Asset_212D1EED/138A5B05E087726A9B80C365FC5F7894/archive.zip\\"
      }
    }
  }
}"
`;
